<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meal_detail_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MealDetailActivity">
    <!-- Contenu principal -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_meal_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.activity.MealDetailActivity">

        <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMealDetailTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@android:color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imageMealDetail"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintTop_toBottomOf="@id/toolbarMealDetailTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/favoriteButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/imageMealDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/favoriteTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_add"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/favoriteIv"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/ic_favorite"
                android:contentDescription="@string/favorite_add"
                app:tint="@color/ic_favorite_normal" />
        </LinearLayout>

    <TextView
        android:id="@+id/textMealName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoriteButtonLayout"
        app:layout_constraintBottom_toTopOf="@+id/nutriScoreTitle"/>

    <TextView
        android:id="@+id/nutriScoreTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nutriscore_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMealName"
        app:layout_constraintBottom_toTopOf="@+id/nutriScoreView"/>

    <com.example.myrecipesdoffemontdjegherif.ui.custom.NutriScoreView
        android:id="@+id/nutriScoreView"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMealName"
        app:layout_constraintBottom_toTopOf="@id/textSubtitleOrigin"/>


    <TextView
        android:id="@+id/textSubtitleOrigin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:text="@string/recipe_origin_subtitle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutriScoreView"
        app:layout_constraintBottom_toTopOf="@+id/textMealCategoryOrigin" />

            <TextView
                android:id="@+id/textMealCategoryOrigin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/recipe_origin"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/textSubtitleOrigin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/textMealCategoryOrigin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textSubtitleInstructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_instructions_subtitle"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingVertical="4dp" />

                    <TextView
                        android:id="@+id/textMealInstructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/recipe_instructions"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textSubtitleIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_ingredients_subtitle"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingVertical="4dp" />

                    <TextView
                        android:id="@+id/textMealIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ingrédients"
                        android:textSize="16sp" />
                </LinearLayout>
            </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 2) Le drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        />

</androidx.drawerlayout.widget.DrawerLayout>
